--- a/list.css
+++ b/list.css
@@ -9,7 +9,6 @@ body {
 
 table {
     margin: 20px auto;
-    width: 60%;
     text-align: center;
     border: 1px solid black;
 }
@@ -21,6 +20,7 @@ thead th {
     letter-spacing: 2px;
     text-transform: uppercase;
     border: 1px solid black;
+    text-align: center;
 }
 
 td {
