--- a/src/styles.css
+++ b/src/styles.css
@@ -1,11 +1,5 @@
 @import url("../node_modules/bootstrap/dist/css/bootstrap.min.css");
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
 
-html,
-body {
-  height: 100%;
-}
-body {
-  margin: 0;
-  font-family: Roboto, "Helvetica Neue", sans-serif;
-}
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
