--- a/src/app/movies-list/movies-list.component.css
+++ b/src/app/movies-list/movies-list.component.css
@@ -10,6 +10,22 @@
   clear: both;
 }
 
+/* Float four columns side by side */
+app-movie-item {
+  float: left;
+  width: 50%;
+  padding: 0 10px;
+}
+
+/* Responsive columns */
+@media screen and (max-width: 600px) {
+  app-movie-item {
+    width: 100%;
+    display: block;
+    margin-bottom: 20px;
+  }
+}
+
 .absolute-center {
   display: -ms-flexbox;
   display: -webkit-flex;
