--- a/src/app/movies-list/movies-list.component.html
+++ b/src/app/movies-list/movies-list.component.html
@@ -13,7 +13,21 @@
       <span *ngIf="loadedMovies.length < 1 && !isLoading"
         ><strong>Oops, no movies available!</strong> <br> <strong>Sign in or Check connection</strong></span
       >
+
+      <!-- <ul class="list-group" *ngIf="loadedMovies.length >= 1 && !isLoading">
+      <li class="list-group-item" *ngFor="let movie of loadedMovies">
+        <h3 (click)="onMovieSelected(movie)">{{ movie["title"] }}</h3>
+        <p>{{ movie["overview"] }}</p>
+        <app-movie-item (movie)="(movie)"></app-movie-details>
+      </li>
+    </ul> -->
     </div>
+  </div>
+  <div class="row">
+    <app-movie-item
+      *ngFor="let movie of loadedMovies; let i = index"
+      [movie]="movie"
+    ></app-movie-item>
   </div>
 </div>
 
