restructuring and added authguard instead of manual authentication

--- a/src/app/movies-list/movies-list.component.html
+++ b/src/app/movies-list/movies-list.component.html
@@ -18,7 +18,7 @@
   </div>
   <div class="row">
     <app-movie-item
-      *ngFor="let movie of loadedMovies; let i = index"
+      *ngFor="let movie of loadedMovies"
       [movie]="movie"
     ></app-movie-item>
   </div>
