--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -6,7 +6,7 @@
 
     <div class="navbar-collapse">
       <ul class="navbar-nav mr-auto">
-        <li class="nav-item active" routerLinkActive="active">
+        <li class="nav-item active" routerLinkActive="active" *ngIf="!isLoggedIn">
           <a class="nav-link" routerLink="/login">Login</a>
         </li>
         <li class="nav-item active" routerLinkActive="active" *ngIf="isLoggedIn">
