--- a/src/app/form-switcher/user-form/user-form.component.html
+++ b/src/app/form-switcher/user-form/user-form.component.html
@@ -1,4 +1,4 @@
-<div class="container" style="margin-top: 1%;">
+<div class="container" style="margin-top: 1%">
   <div class="row">
     <div class="col-xs-12 col-sm-10 offset-sm-1 col-md-8 offset-md-2">
       <form #form="ngForm" (ngSubmit)="onSubmit(form)">
