--- a/src/app/movies-list/movies-list.component.html
+++ b/src/app/movies-list/movies-list.component.html
@@ -5,7 +5,7 @@
       <p>{{ error }}</p>
     </div>
 
-    <div class="col-xs-12 col-md-6 offset-md-3">
+    <div class="col-xs-12">
       <div *ngIf="isLoading" style="text-align: center">
         <app-loading-spinner></app-loading-spinner>
       </div>
