--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -10,6 +10,9 @@
           <a class="nav-link" routerLink="/login">Login</a>
         </li>
         <li class="nav-item active" routerLinkActive="active" *ngIf="isLoggedIn">
+          <a class="nav-link" routerLink="/login" (click)="logout()">Logout</a>
+        </li>
+        <li class="nav-item active" routerLinkActive="active" *ngIf="isLoggedIn">
           <a class="nav-link" routerLink="/moviesList">Movies List</a>
         </li>
       </ul>
